<resources>
    <string name="app_name">FavoriteMovies</string>
    <string name="popular">Popular Movies</string>
    <string name="top_rated">Top Rated Movies</string>
    <string name="favorite">Favorite Movies</string>
    <string name="movie">Movie</string>
    <string name="action_popular">Popular Movies</string>
    <string name="action_top">Top Rated Movies</string>
    <string name="action_fav">Favorite Movies</string>
    <string name="average_vote">Average vote:</string>
    <string name="release_date">Release date:</string>
    <string name="first_air_date">First air date:</string>
    <string name="vote_count">Votes:</string>
    <string name="popularity">Popularity:</string>
    <string name="original_language">Original Language:</string>
    <string name="overview">Overview:</string>
    <string name="synopsis">Synopsis</string>
    <string name="videos">Videos</string>
    <string name="reviews">Reviews</string>
    <string name="favorite_empty">You haven\'t select \n favorite movies</string>
    <string name="movies_empty">No movies \n available or detected</string>
    <string name="reviews_empty">No reviews \n available or detected</string>
    <string name="videos_empty">No videos \n available or detected</string>
    <string name="movies_connection">Connect to internet to \n get movies</string>
    <string name="reviews_connection">Connect to internet to \n get reviews</string>
    <string name="videos_connection">Connect to internet to \n get videos</string>
</resources>
