<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:context=".DetailActivity">

            <ImageView
                android:id="@+id/iv_detail_movie_image"
                android:layout_width="@dimen/movie_image_width"
                android:layout_height="@dimen/movie_image_height"
                android:contentDescription="@string/movie"
                android:padding="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detail_movie_vote_average_label"
                style="@style/Labels"
                android:text="@string/average_vote"
                app:layout_constraintEnd_toStartOf="@+id/tv_detail_movie_vote_average"
                app:layout_constraintStart_toEndOf="@+id/iv_detail_movie_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detail_movie_vote_average"
                style="@style/Values"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_detail_movie_vote_average_label"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detail_movie_release_date_label"
                style="@style/Labels"
                android:text="@string/release_date"
                app:layout_constraintEnd_toStartOf="@+id/tv_detail_movie_release_date"
                app:layout_constraintStart_toEndOf="@+id/iv_detail_movie_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_vote_average" />

            <TextView
                android:id="@+id/tv_detail_movie_release_date"
                style="@style/Values"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_detail_movie_release_date_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_vote_average" />

            <TextView
                android:id="@+id/tv_detail_movie_vote_count_label"
                style="@style/Labels"
                android:text="@string/vote_count"
                app:layout_constraintEnd_toStartOf="@+id/tv_detail_movie_vote_count"
                app:layout_constraintStart_toEndOf="@+id/iv_detail_movie_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_release_date" />

            <TextView
                android:id="@+id/tv_detail_movie_vote_count"
                style="@style/Values"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_detail_movie_vote_count_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_release_date" />

            <TextView
                android:id="@+id/tv_detail_movie_popularity_label"
                style="@style/Labels"
                android:text="@string/popularity"
                app:layout_constraintEnd_toStartOf="@+id/tv_detail_movie_popularity"
                app:layout_constraintStart_toEndOf="@+id/iv_detail_movie_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_vote_count" />

            <TextView
                android:id="@+id/tv_detail_movie_popularity"
                style="@style/Values"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_detail_movie_popularity_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_vote_count" />

            <TextView
                android:id="@+id/tv_detail_movie_original_language_label"
                style="@style/Labels"
                android:text="@string/original_language"
                app:layout_constraintEnd_toStartOf="@+id/tv_detail_movie_original_language"
                app:layout_constraintStart_toEndOf="@+id/iv_detail_movie_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_popularity" />

            <TextView
                android:id="@+id/tv_detail_movie_original_language"
                style="@style/Values"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_detail_movie_original_language_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_popularity" />

            <TextView
                android:id="@+id/tv_detail_movie_overview_label"
                style="@style/Values"
                android:layout_marginTop="5dp"
                android:text="@string/overview"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_detail_movie_image" />

            <TextView
                android:id="@+id/tv_detail_movie_overview"
                style="@style/Values"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_overview_label"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>